--- a/options/options.html
+++ b/options/options.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Pomodoro Timer Options</h1>
-    <label for="time-option">Default Time in Minutes ( 1 - 60): </label>
+    <label for="time-option"><h2>Default Time in Minutes ( 1 - 60): </h2></label>
     <input id="time-option" type="number" min="1" max="60" value="25" />
     <button id="save-btn">Save Options</button>
   </body>
